--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,7 +52,9 @@ jobs:
           GRAFANA_API_KEY: ${{ secrets.GRAFANA_API_KEY }}
         run: |
           TIMESTAMP=$(date +%s%N)
-          JSON=$(jq -c '.' trivy-report.json)
+          # Convert the entire Trivy JSON into a single escaped string
+          LOG_CONTENT=$(cat trivy-report.json | jq -Rs .)
+          
           cat <<EOF > payload.json
           {
             "streams": [
@@ -63,19 +65,19 @@ jobs:
                   "commit": "${{ github.sha }}"
                 },
                 "values": [
-                  ["$TIMESTAMP", "$JSON"]
+                  ["$TIMESTAMP", $LOG_CONTENT]
                 ]
               }
             ]
           }
           EOF
 
-          curl -v -X POST \
+          echo "Sending logs to Loki..."
+          curl -v -u "${GRAFANA_USER_ID}:${GRAFANA_API_KEY}" \
             -H "Content-Type: application/json" \
-            -u "${GRAFANA_USER_ID}:${GRAFANA_API_KEY}" \
+            -X POST \
             --data @payload.json \
             $LOKI_URL/loki/api/v1/push
-
       # 🐋 Log in to DockerHub
       - name: Log in to DockerHub
         uses: docker/login-action@v3
