--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
 
       - name: Run Gitleaks scan
         uses: zricethezav/gitleaks-action@v2
+        with:
+          args: detect --source . --report-path gitleaks-report.json --report-format json
+
      
 
       # 🐋 Log in to DockerHub
