--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,20 +27,19 @@ jobs:
 
       # 🧪 Run tests
       - name: Run tests
-        run: pytest || echo "No tests found, skipping..."
-
+        run: pytest || echo "No tests found, skipping.    
       # 🐳 Build Docker image
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }} .
 
-        #gitliks
+      # gitleaks tests 
 
       - name: Run Gitleaks scan
         uses: zricethezav/gitleaks-action@v2
         with:
-          args: detect --source . --report-path gitleaks-report.json --report-format json
+          args: detect --source . --report-format sarif --report-path gitleaks-report.sarif
 
-     
+
 
       # 🐋 Log in to DockerHub
       - name: Log in to DockerHub
@@ -53,3 +52,4 @@ jobs:
       - name: Push Docker image
         if: success()
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}
+        
