--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,21 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 🧩 Checkout source code
+      #  Checkout source code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 🐍 Set up Python
+      #  Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # 📦 Install dependencies
+      #  Install dependencies
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # 🧪 Run tests
+      #  Run tests
       - name: Run tests
         run: |
           if [ -f "requirements-test.txt" ]; then
@@ -33,17 +33,17 @@ jobs:
           fi
           pytest || echo "Tests failed or no tests found - continuing pipeline"
 
-      # 🐳 Build Docker image
+      #  Build Docker image
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }} .
 
-      # 🔍 Gitleaks scan with display
+      #  Gitleaks scan with display
       - name: Run Gitleaks scan
         uses: zricethezav/gitleaks-action@v2
         with:
           args: detect --source . --report-format sarif --report-path gitleaks-report.sarif --verbose
 
-      # 🔍 Trivy vulnerability scan with console output + JSON report
+      #  Trivy vulnerability scan with console output + JSON report
       - name: Trivy vulnerability scan
         uses: aquasecurity/trivy-action@master
         with:
@@ -54,10 +54,10 @@ jobs:
           ignore-unfixed: true
           exit-code: 0
 
-      # 📊 Display Trivy results in console
+      #  Display Trivy results in console
       - name: Display Trivy results
         run: |
-          echo "📋 TRIVY VULNERABILITY SCAN RESULTS:"
+          echo " TRIVY VULNERABILITY SCAN RESULTS:"
           echo "======================================"
           if [ -f "trivy-report.txt" ]; then
             cat trivy-report.txt
@@ -65,7 +65,7 @@ jobs:
             echo "No Trivy report generated"
           fi
 
-      # 📈 Generate additional JSON report for automation
+      # Generate additional JSON report for automation
       - name: Generate Trivy JSON report
         uses: aquasecurity/trivy-action@master
         with:
@@ -76,10 +76,10 @@ jobs:
           ignore-unfixed: true
           exit-code: 0
 
-      # 📝 Display summary of critical/high vulnerabilities
+      #  Display summary of critical/high vulnerabilities
       - name: Display vulnerability summary
         run: |
-          echo "🔍 VULNERABILITY SUMMARY:"
+          echo " VULNERABILITY SUMMARY:"
           echo "=========================="
           if [ -f "trivy-report.json" ]; then
             CRITICAL=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
@@ -96,19 +96,19 @@ jobs:
             echo "No vulnerability data available"
           fi
 
-      # 🐋 Log in to DockerHub
+      #  Log in to DockerHub
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 🚀 Push image to DockerHub
+      #  Push image to DockerHub
       - name: Push Docker image
         if: success()
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}
 
-      # 📤 Upload security reports as artifacts
+      #  Upload security reports as artifacts
       - name: Upload security reports
         uses: actions/upload-artifact@v4
         with:
