--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,29 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # ------------------------------
-      # 1. Checkout source code
-      # ------------------------------
+      # Checkout source code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # ------------------------------
-      # 2. Set up Python
-      # ------------------------------
+      # Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ------------------------------
-      # 3. Install dependencies
-      # ------------------------------
+      # Install dependencies
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # ------------------------------
-      # 4. Run tests (if any)
-      # ------------------------------
+      # Run tests
       - name: Run tests
         run: |
           if [ -f "requirements-test.txt" ]; then
@@ -41,27 +33,20 @@ jobs:
           fi
           pytest || echo "Tests failed or no tests found - continuing pipeline"
 
-      # ------------------------------
-      # 5. Build Docker image
-      # ------------------------------
+      # Build Docker image
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }} .
 
-      # ------------------------------
-      # 6. Gitleaks scan
-      # ------------------------------
+      # Run Gitleaks scan (using environment variables)
       - name: Run Gitleaks scan
         uses: gitleaks/gitleaks-action@v2
-        with:
-          scan-path: .
-          report-format: sarif
-          report-path: gitleaks-report.sarif
-          verbose: true
+        env:
+          GITLEAKS_FORMAT: sarif
+          GITLEAKS_PATH: .
+          GITLEAKS_REPORT_PATH: gitleaks-report.sarif
+        continue-on-error: true
 
-
-      # ------------------------------
-      # 7. Trivy scan (table format)
-      # ------------------------------
+      # Trivy vulnerability scan (table output)
       - name: Trivy vulnerability scan
         uses: aquasecurity/trivy-action@master
         with:
@@ -70,11 +55,10 @@ jobs:
           output: trivy-report.txt
           severity: CRITICAL
           ignore-unfixed: true
-          exit-code: 1
+          exit-code: 0  # don’t stop the pipeline
+        continue-on-error: true
 
-      # ------------------------------
-      # 8. Display Trivy results in console
-      # ------------------------------
+      # Display Trivy results in console
       - name: Display Trivy results
         run: |
           echo " TRIVY VULNERABILITY SCAN RESULTS:"
@@ -85,9 +69,7 @@ jobs:
             echo "No Trivy report generated"
           fi
 
-      # ------------------------------
-      # 9. Generate JSON report for automation
-      # ------------------------------
+      # Generate JSON report for automation
       - name: Generate Trivy JSON report
         uses: aquasecurity/trivy-action@master
         with:
@@ -97,22 +79,20 @@ jobs:
           severity: CRITICAL,HIGH,MEDIUM,LOW
           ignore-unfixed: true
           exit-code: 0
+        continue-on-error: true
 
-      # ------------------------------
-      # 10. Display summary of vulnerabilities
-      # ------------------------------
+      # Display vulnerability summary
       - name: Display vulnerability summary
         run: |
           echo " VULNERABILITY SUMMARY:"
           echo "=========================="
           if [ -f "trivy-report.json" ]; then
-            CRITICAL=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
-            HIGH=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "HIGH") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
-            MEDIUM=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "MEDIUM") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
-            LOW=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "LOW") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
-            
+            CRITICAL=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL")' trivy-report.json | wc -l)
+            HIGH=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "HIGH")' trivy-report.json | wc -l)
+            MEDIUM=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "MEDIUM")' trivy-report.json | wc -l)
+            LOW=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "LOW")' trivy-report.json | wc -l)
             echo "Critical: $CRITICAL"
-            echo "High: $HIGH" 
+            echo "High: $HIGH"
             echo "Medium: $MEDIUM"
             echo "Low: $LOW"
             echo "Total: $((CRITICAL + HIGH + MEDIUM + LOW))"
@@ -120,25 +100,19 @@ jobs:
             echo "No vulnerability data available"
           fi
 
-      # ------------------------------
-      # 11. Log in to DockerHub
-      # ------------------------------
+      # Log in to DockerHub
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # ------------------------------
-      # 12. Push Docker image
-      # ------------------------------
+      # Push Docker image
       - name: Push Docker image
         if: success()
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}
 
-      # ------------------------------
-      # 13. Upload reports as artifacts
-      # ------------------------------
+      # Upload security reports
       - name: Upload security reports
         uses: actions/upload-artifact@v4
         with:
@@ -149,76 +123,26 @@ jobs:
             trivy-report.txt
           retention-days: 7
 
-      # ------------------------------
-      # 14. Send Trivy report to Grafana Cloud Loki
-      # ------------------------------
-      - name: Push Trivy JSON report to Grafana Cloud Loki
-        if: always()
+      # Send scan results to Grafana Cloud Loki
+      - name: Send scan results to Grafana Cloud Loki
         env:
-          LOKI_URL: ${{ secrets.GRAFANA_LOKI_URL }}
-          LOKI_USER: ${{ secrets.GRAFANA_LOKI_USER }}
-          LOKI_PASS: ${{ secrets.GRAFANA_LOKI_PASS }}
+          GRAFANA_USERNAME: "1367479"
+          GRAFANA_API_KEY: ${{ secrets.GRAFANA_API_KEY }}
         run: |
-          if [ -f "trivy-report.json" ]; then
-            echo "Sending Trivy results to Grafana Cloud Loki..."
-            TIMESTAMP=$(date +%s%N)
-            LOG_LINE=$(jq -c '.' trivy-report.json)
-            cat > /tmp/loki-payload.json <<EOF
-            {
-              "streams": [
-                {
-                  "stream": {
-                    "job": "trivy-scan",
-                    "repo": "${GITHUB_REPOSITORY}",
-                    "branch": "${GITHUB_REF_NAME}",
-                    "sha": "${GITHUB_SHA}"
-                  },
-                  "values": [ [ "${TIMESTAMP}", ${LOG_LINE} ] ]
-                }
-              ]
-            }
-            EOF
-            curl -s -u "$LOKI_USER:$LOKI_PASS" \
-              -H "Content-Type: application/json" \
-              -X POST "$LOKI_URL" \
-              --data @/tmp/loki-payload.json || echo "Loki push failed"
-          else
-            echo "No trivy-report.json file found"
-          fi
-
-      # ------------------------------
-      # 15. Send Gitleaks report to Grafana Cloud Loki
-      # ------------------------------
-      - name: Push Gitleaks SARIF report to Grafana Cloud Loki
-        if: always()
-        env:
-          LOKI_URL: ${{ secrets.GRAFANA_LOKI_URL }}
-          LOKI_USER: ${{ secrets.GRAFANA_LOKI_USER }}
-          LOKI_PASS: ${{ secrets.GRAFANA_LOKI_PASS }}
-        run: |
-          if [ -f "gitleaks-report.sarif" ]; then
-            echo "Sending Gitleaks results to Grafana Cloud Loki..."
-            TIMESTAMP=$(date +%s%N)
-            LOG_LINE=$(jq -c '.' gitleaks-report.sarif)
-            cat > /tmp/loki-payload.json <<EOF
-            {
-              "streams": [
-                {
-                  "stream": {
-                    "job": "gitleaks-scan",
-                    "repo": "${GITHUB_REPOSITORY}",
-                    "branch": "${GITHUB_REF_NAME}",
-                    "sha": "${GITHUB_SHA}"
-                  },
-                  "values": [ [ "${TIMESTAMP}", ${LOG_LINE} ] ]
-                }
-              ]
-            }
-            EOF
-            curl -s -u "$LOKI_USER:$LOKI_PASS" \
-              -H "Content-Type: application/json" \
-              -X POST "$LOKI_URL" \
-              --data @/tmp/loki-payload.json || echo "Loki push failed"
-          else
-            echo "No gitleaks-report.sarif file found"
-          fi
+          echo "Pushing Trivy results to Grafana Cloud..."
+          curl -X POST "https://logs-prod-012.grafana.net/loki/api/v1/push" \
+            -u "$GRAFANA_USERNAME:$GRAFANA_API_KEY" \
+            -H "Content-Type: application/json" \
+            --data-binary @<(cat <<EOF
+          {
+            "streams": [
+              {
+                "stream": {"job": "ci-cd", "repo": "${{ github.repository }}"},
+                "values": [
+                  ["$(date +%s%N)", "$(cat trivy-report.txt | sed 's/"/\\"/g' | tr -d '\n')"]
+                ]
+              }
+            ]
+          }
+EOF
+)
