--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,21 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout source code
+      #  Checkout source code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Set up Python
+      #  Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # Install dependencies
+      #  Install dependencies
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # Run tests
+      #  Run tests
       - name: Run tests
         run: |
           if [ -f "requirements-test.txt" ]; then
@@ -33,20 +33,17 @@ jobs:
           fi
           pytest || echo "Tests failed or no tests found - continuing pipeline"
 
-      # Build Docker image
+      #  Build Docker image
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }} .
 
-      # Run Gitleaks scan (using environment variables)
+      #  Gitleaks scan with display
       - name: Run Gitleaks scan
-        uses: gitleaks/gitleaks-action@v2
-        env:
-          GITLEAKS_FORMAT: sarif
-          GITLEAKS_PATH: .
-          GITLEAKS_REPORT_PATH: gitleaks-report.sarif
-        continue-on-error: true
+        uses: zricethezav/gitleaks-action@v2
+        with:
+          args: detect --source . --report-format sarif --report-path gitleaks-report.sarif --verbose
 
-      # Trivy vulnerability scan (table output)
+      #  Trivy vulnerability scan with console output + JSON report
       - name: Trivy vulnerability scan
         uses: aquasecurity/trivy-action@master
         with:
@@ -55,10 +52,9 @@ jobs:
           output: trivy-report.txt
           severity: CRITICAL
           ignore-unfixed: true
-          exit-code: 0  # don’t stop the pipeline
-        continue-on-error: true
+          exit-code: 1
 
-      # Display Trivy results in console
+      #  Display Trivy results in console
       - name: Display Trivy results
         run: |
           echo " TRIVY VULNERABILITY SCAN RESULTS:"
@@ -69,7 +65,7 @@ jobs:
             echo "No Trivy report generated"
           fi
 
-      # Generate JSON report for automation
+      # Generate additional JSON report for automation
       - name: Generate Trivy JSON report
         uses: aquasecurity/trivy-action@master
         with:
@@ -79,20 +75,20 @@ jobs:
           severity: CRITICAL,HIGH,MEDIUM,LOW
           ignore-unfixed: true
           exit-code: 0
-        continue-on-error: true
 
-      # Display vulnerability summary
+      #  Display summary of critical/high vulnerabilities
       - name: Display vulnerability summary
         run: |
           echo " VULNERABILITY SUMMARY:"
           echo "=========================="
           if [ -f "trivy-report.json" ]; then
-            CRITICAL=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL")' trivy-report.json | wc -l)
-            HIGH=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "HIGH")' trivy-report.json | wc -l)
-            MEDIUM=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "MEDIUM")' trivy-report.json | wc -l)
-            LOW=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "LOW")' trivy-report.json | wc -l)
+            CRITICAL=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
+            HIGH=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "HIGH") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
+            MEDIUM=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "MEDIUM") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
+            LOW=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "LOW") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
+            
             echo "Critical: $CRITICAL"
-            echo "High: $HIGH"
+            echo "High: $HIGH" 
             echo "Medium: $MEDIUM"
             echo "Low: $LOW"
             echo "Total: $((CRITICAL + HIGH + MEDIUM + LOW))"
@@ -100,19 +96,19 @@ jobs:
             echo "No vulnerability data available"
           fi
 
-      # Log in to DockerHub
+      #  Log in to DockerHub
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Push Docker image
+      #  Push image to DockerHub
       - name: Push Docker image
         if: success()
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}
 
-      # Upload security reports
+      #  Upload security reports as artifacts
       - name: Upload security reports
         uses: actions/upload-artifact@v4
         with:
@@ -123,26 +119,26 @@ jobs:
             trivy-report.txt
           retention-days: 7
 
-      # Send scan results to Grafana Cloud Loki
-      - name: Send scan results to Grafana Cloud Loki
+      #   Push Trivy results to Grafana Cloud Loki
+      - name: Push results to Grafana Cloud
         env:
-          GRAFANA_USERNAME: "1367479"
+          GRAFANA_USER: "1367479"
           GRAFANA_API_KEY: ${{ secrets.GRAFANA_API_KEY }}
         run: |
-          echo "Pushing Trivy results to Grafana Cloud..."
-          curl -X POST "https://logs-prod-012.grafana.net/loki/api/v1/push" \
-            -u "$GRAFANA_USERNAME:$GRAFANA_API_KEY" \
-            -H "Content-Type: application/json" \
-            --data-binary @<(cat <<EOF
-          {
-            "streams": [
-              {
-                "stream": {"job": "ci-cd", "repo": "${{ github.repository }}"},
-                "values": [
-                  ["$(date +%s%N)", "$(cat trivy-report.txt | sed 's/"/\\"/g' | tr -d '\n')"]
+          echo "Pushing Trivy scan results to Grafana Cloud..."
+          if [ -f "trivy-report.txt" ]; then
+            LOG_CONTENT=$(cat trivy-report.txt | sed 's/"/\\"/g' | tr -d '\n')
+            curl -X POST "https://logs-prod-012.grafana.net/loki/api/v1/push" \
+              -u "$GRAFANA_USER:$GRAFANA_API_KEY" \
+              -H "Content-Type: application/json" \
+              --data-raw "{
+                \"streams\": [
+                  {
+                    \"stream\": {\"job\": \"ci-cd\", \"repo\": \"${{ github.repository }}\", \"commit\": \"${{ github.sha }}\"},
+                    \"values\": [[\"$(date +%s%N)\", \"$LOG_CONTENT\"]]
+                  }
                 ]
-              }
-            ]
-          }
-EOF
-)
+              }"
+          else
+            echo "No Trivy report found to send to Grafana Cloud."
+          fi
